# ContoCorrente

./: .gitignore  CMakeLists.txt  README.md  account.cpp  account.h  gestione_transazioni  transaction.h  transazioni.csv
include/CONTOCORRENTE/: transaction.h
include/ContoCorrente/: account.h  transaction.h
src/: account.cpp  main.cpp  transaction.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  test_account.cpp  test_transaction.cpp
